--- a/src/View/UseModel/index.css
+++ b/src/View/UseModel/index.css
@@ -61,6 +61,7 @@
 .model-content-right{
   flex: 0.8;
   height: 100%;
+  overflow: hidden !important;
 }
 .split-line{
   height: 2px;
@@ -70,6 +71,18 @@
   font-weight: 600;
 }
 .arrow{
+  transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+  width: 20px;
+  height: 20px;
+  border: 2px solid skyblue;
+  border-left-width: 0;
+  border-bottom-width: 0;
+  margin-top: 172px;
+  background-color: skyblue;
+  margin-left: -10px;
+}
+
+.arrow2{
   transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
   width: 20px;
   height: 20px;
